feat:Implementacion de imagenes con s3 en el modulo de administradores